--- a/dsk_menu.html
+++ b/dsk_menu.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="menu">
+    <div class="dsk-menu">
         <ul>
             <li>
                 <a href="/" class="title">My orders</a>
