--- a/index.html
+++ b/index.html
@@ -7,10 +7,60 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/Estilos.css">
-    <title>Project X</title>
+    <link rel="stylesheet" href="css/fusion.css">
+    <title>Document</title>
 </head>
 <body>
-    
+    <nav class="nav">
+        <img src="./icons/icon_menu.svg" alt="menu" class="menu">
+
+        <div class="navbar-left">
+            <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+
+            <ul>
+                <li>
+                    <a href="/">All</a>
+                </li>
+                <li>
+                    <a href="/">Clothes</a>
+                </li>
+                <li>
+                    <a href="/">Electronic</a>
+                </li>
+                <li>
+                    <a href="/">Furnitures</a>
+                </li>
+                <li>
+                    <a href="/">Toys</a>
+                </li>
+                <li>
+                    <a href="/">Others</a>
+                </li>
+            </ul>
+        </div>
+        <div class="navbar-right">
+            <ul>
+                <li class="navbar-email">andersoncamilo132@gmail.com</li>
+                <li class="navbar-shopping-cart">
+                    <img src="./icons/icon_shopping_cart.svg" alt="shopping cart">
+                    <div>3</div>
+                </li>
+            </ul>
+        </div>
+        <div class="dsk-menu inactive">
+            <ul>
+                <li>
+                    <a href="/" class="title">My orders</a>
+                </li>
+                <li>
+                    <a href="/" class="title">My account</a>
+                </li>
+                <li>
+                    <a href="/" class="title">Sign out</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <script src="./fusion.js"></script>
 </body>
 </html>
