--- a/index.html
+++ b/index.html
@@ -60,6 +60,42 @@
                 </li>
             </ul>
         </div>
+        <div class="mobile-menu inactive">
+            <ul>
+                <li>
+                    <a href="/">CATEGORIES</a>
+                </li>
+                <li>
+                    <a href="/">All</a>
+                </li>            <li>
+                    <a href="/">Clothes</a>
+                </li>            <li>
+                    <a href="/">Electronics</a>
+                </li>            <li>
+                    <a href="/">Toys</a>
+                </li>            <li>
+                    <a href="/">Others</a>
+                </li>
+            </ul>
+                
+            <ul>
+                <li>
+                    <a href="/">My orders</a>
+                </li>
+                <li>
+                    <a href="/">My account</a>
+                </li>
+            </ul>
+    
+            <ul>
+                <li>
+                    <a class="email" href="/">andersoncamilo132@gmail.com</a>
+                </li>
+                <li>
+                    <a class="sign-out" href="/">Sign out</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <script src="./fusion.js"></script>
 </body>
