--- a/index.html
+++ b/index.html
@@ -147,6 +147,23 @@
           </div>
     </aside>
 
+    <section class="main-container">
+        <div class="card-container">
+
+            <!-- <div class="producto-card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
+
+            </div> -->
+
     <script src="./fusion.js"></script>
 </body>
 </html>
