fusion detail con index.html y arreglo de errores homepage

--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
     <section class="main-container">
         <div class="card-container">
 
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -27,7 +27,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -40,7 +40,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -53,7 +53,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -66,7 +66,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -79,7 +79,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -92,7 +92,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -105,7 +105,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -118,7 +118,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -131,7 +131,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -144,7 +144,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -157,7 +157,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -170,7 +170,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -183,7 +183,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
@@ -196,7 +196,7 @@
                 </div>
 
             </div>
-            <div class="producto-card">
+            <div class="product-card">
                 <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="product-info">
                     <div>
