--- a/index.html
+++ b/index.html
@@ -147,22 +147,33 @@
           </div>
     </aside>
 
+    <aside class="detail-view inactive">
+        
+        <div class="product-detail-close">
+            <img src="./icons/icon_close.png" alt="close">
+        </div>
+
+        <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Bike">
+
+        <div class="detail-info">
+
+            <p>$50.00</p>
+            <p>Bike</p>
+            <p>
+                The cheapest and fastest bicycle you will find on the market,
+                you will not even need to pedal, it advances on its own.
+            </p>
+
+            <button class="primary-button">
+                <img src="./icons/bt_add_to_cart.svg" alt="Add to cart">
+                Add to cart
+            </button>
+        </div>
+    </aside>
+
     <section class="main-container">
         <div class="card-container">
-
-            <!-- <div class="producto-card">
-                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-                <div class="product-info">
-                    <div>
-                        <p>$120.00</p>
-                        <p>Bike</p>
-                    </div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-
-            </div> -->
+    </section>
 
     <script src="./fusion.js"></script>
 </body>
