--- a/detail.html
+++ b/detail.html
@@ -11,15 +11,15 @@
     <title>Document</title>
 </head>
 <body>
-    <aside class="product-detail">
+    <aside class="detail-view">
         
-        <div class="producto-detail-close">
+        <div class="product-detail-close">
             <img src="./icons/icon_close.png" alt="close">
         </div>
 
         <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Bike">
 
-        <div class="product-info">
+        <div class="detail-info">
 
             <p>$50.00</p>
             <p>Bike</p>
