interaction product number

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li class="navbar-email">andersoncamilo132@gmail.com</li>
                 <li class="navbar-shopping-cart">
                     <img src="./icons/icon_shopping_cart.svg" alt="shopping cart">
-                    <div>3</div>
+                    <div class="purchases"></div>
                 </li>
             </ul>
         </div>
